--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <script src="script.js"></script>
 </head>
 <body>
- <a href="www.valentindebels.fr">coucou</a>
- <a href="www.valentindebels.fr">c'est</a>
- <a href="www.valentindebels.fr">mon site</a>
+  <nav>
+    <a href="www.valentindebels.fr">coucou</a>
+    <a href="www.valentindebels.fr">c'est</a>
+    <a href="www.valentindebels.fr">mon site</a>
+  </nav>
 </body>
 </html>
