--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <nav>
-    <a href="www.valentindebels.fr">coucou</a>
-    <a href="www.valentindebels.fr">c'est</a>
-    <a href="www.valentindebels.fr">mon site</a>
-  </nav>
+    <h1>Hello world</h1>
+    <h2>Je suis un sous-titre</h2>
+    <nav>
+      <a href="www.valentindebels.fr">coucou</a>
+      <a href="www.valentindebels.fr">c'est</a>
+      <a href="www.valentindebels.fr">mon site</a>
+    </nav>
 </body>
 </html>
