--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <a href="www.valentindebels.fr">coucou</a>
       <a href="www.valentindebels.fr">c'est</a>
       <a href="www.valentindebels.fr">mon site</a>
+      <a href="www.valentindebels.fr">NOUVEATES</a>
     </nav>
 </body>
 </html>
