--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello world</h1>
     <h2>Je suis un sous-titre</h2>
     <h3>Je suis un sous-sous-menu</h3>
+    <p>Bonjour</p>
     <nav>
       <a href="www.valentindebels.fr">coucou</a>
       <a href="www.valentindebels.fr">c'est</a>
